Fix z-index back

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -170,6 +170,27 @@
 }
 
 /*******************************************************/
+/* Fix z-index. */
+header.md-header {
+  z-index: 900 !important;
+}
+.md-sidebar {
+  z-index: 1000 !important;
+}
+.md-overlay {
+  z-index: 950 !important;
+}
+.md-search__overlay {
+  z-index: 1100 !important;
+}
+.md-search__form {
+  z-index: 1200 !important;
+}
+.md-search__output {
+  z-index: 1100 !important;
+}
+
+/*******************************************************/
 /* Hide repo stats. */
 .md-source__fact--stars, .md-source__fact--forks {
   display: none;
